# kmeans

./: .gitignore  CMakeLists.txt  main.cpp
include/: kmeans.hpp  point.hpp  utils.hpp
src/: kmeans.cpp  point.cpp  utils.cpp
tests/: CMakeLists.txt  test_kmeans.cpp  test_point.cpp
